fix nav z-index

--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,10 @@ body{
     background: #17181a;
     font-family: $main-font;
     overflow-x: hidden;
+
+    &.hide{
+        overflow: hidden;
+    }
 } 
 #logo {
     font-family: $secondary-font;
@@ -25,6 +29,8 @@ body{
     width: 80%;
     margin: auto;
     padding: 1.5rem 0;
+    position: relative;
+    z-index: 2;
 }
 .line1,.line2 { 
     width: 3rem;
